kubernetes/default/barcodebuddy/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: barcodebuddy
  namespace: default
spec:
parentRefs:
  - name: external
    namespace: network
  hostnames:
    - barcodebuddy.whoverse.nexus
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: barcodebuddy
          port: 80
